# ai4mahjiong

./: .gitignore  README.md  analysis_result.txt  pyproject.toml  run_competition_result.txt
examples/botzone/random_agent/: action.py  util.py
examples/dnn/: data.py  evaluate.py  get_game_data.py  train.py
examples/dnn/.ipynb_checkpoints/: data-checkpoint.py
examples/run/: run_competition.py  run_game.py
examples4chinese_mahjiong/botzone/efficient_agent_0/: action.py  player.py
examples4chinese_mahjiong/botzone/efficient_agent_1/: action.py  player.py
examples4chinese_mahjiong/botzone/random_agent/: action.py  player.py
examples4chinese_mahjiong/botzone/sl_cnn_agent/: action.py  model.py  player.py
examples4chinese_mahjiong/botzone/sl_hybrid_agent/: __main__.py  action.py  model.py  player.py
examples4chinese_mahjiong/dnn/: get_dnn_data.py  get_dnn_data2.py  get_game_data2.py  model_evaluate2.py  model_train2.py  result2.txt  train1.py  train2.py
examples4chinese_mahjiong/run/: run_competition.py
pymj/agent/chinese_official_mahjiong/: Agent.py  DQNAgent.py  DQNTrainer.py  EfficientAgent.py  FuLuRandomAgent.py  NoFuLuRandomAgent.py  SLBasedAgent.py  SLBasedHybirdAgent.py  utils.py
pymj/botzone/: GameData.py  SLDataset1.py  SLDataset2.py  action.py  util.py
pymj/botzone/.ipynb_checkpoints/: SLDataset1-checkpoint.py
pymj/dnn_model/: resnet.py  utils.py
pymj/game/chinese_ofiicial_mahjiong/: Action.py  Card.py  Competition.py  Game.py  Player.py
