[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymj"
version = "0.0.1"
description = ""
authors = [
    { name = "ZhijieXiong", email = "18800118477@163.com" },
]
readme = "README4PYPI.md"
license = { text = "MIT License" }
requires-python = ">=3.7"
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.urls]
Homepage = "https://zhijiexiong.github.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymj*"]
[tool.setuptools]
package-dir = { "pymj" = "pymj" }